2005-02-14  Harald Harders  <h.harders@tu-bs.de>

	* term/pslatex.trm: SourceForge patch #1121972 "Improve input encoding
	in epslatex terminal". Added the koi8-u encoding to epslatex. Added
	\inputencoding{...} to the output file. This enables the user to use
	different input encodings in the surrounding LaTeX file and in the plot.
	Added a user-friendly error message if the package graphicx.sty or
	graphics.sty is not loaded.

2005-02-13  Harald Harders  <h.harders@tu-bs.de>

	* term/post.trm term/pslatex.trm: Clean up code in accordance with
	compiler warnings.

2005-02-13  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* configure.in: New configuration option --enable-x11-mbfonts
	(enabled by default).  Interpretation of character encodings
	is determined at run time by the LC_CTYPE locale setting.
	
	* src/gplt_x11.c: All calls to x11 font handling routines are
	conditionally substituted by the equivalent calls to multi-byte
	routines if --enable-x11-mbfonts is configured, and a multi-byte
	font has in fact been selected.

	* NEWS term/x11.trm: Add documentation that describes the specification
	of multi-byte fonts:
	    set term x11 font "mbfont:<primary font>;<secondary font>"
	    set label "foo" font "mbfont:<primary font>;<secondary font>"

2005-02-10  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (plot3d_lines_pm3d key_sample_line_pm3d): 
	If the graph specifies a solid rgb color, fall back to equivalent
	single-color routine.

2005-02-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/pm3d.h src/pm3d.c: New global routine is_plot_with_colorbox().
	New local variable plot_wants_colorbox. Color box is wanted for all draw
	elements using palette except those with TC_RGB.

	* src/graphics.c src/graph3d.c: No colorbox for 2D and 3D plots with
	elements using "rgbcolor".

2005-02-10  Ethan Merritt  <merritt@u.washington.edu>

	* src/misc.c (lp_parse): Accept full keyword "rgbcolor" for the line
	attribute.
