@@ -1,5 +1,5 @@
 /* Hello, Emacs, this is -*-C-*-
- * $Id: svg.trm,v 1.49 2005/01/05 19:37:26 broeker Exp $
+ * $Id: svg.trm,v 1.50 2005/02/14 10:19:17 mikulik Exp $
  */
 
 /*------------------------------------------------------------------------------------------------------------------------------------
@@ -82,7 +82,6 @@ TERM_PUBLIC void ENHsvg_writec __PROTO((int));
 #ifdef TERM_BODY
 
 #ifdef PM3D
-#   include "getcolor.h"
 static t_sm_palette SVG_palette;
 static unsigned char SVG_red = 0;
 static unsigned char SVG_green = 0;
